--- a/index.html
+++ b/index.html
@@ -1,1 +1,243 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Almond & Valentina - A Tale of Two Pups</title>
+
+  <!-- Bootstrap Core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom Fonts -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/stylish-portfolio.min.css" rel="stylesheet">
+
+</head>
+
+<body id="page-top">
+
+  <!-- Navigation -->
+  <a class="menu-toggle rounded" href="#">
+    <i class="fas fa-bars"></i>
+  </a>
+  <nav id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+      <li class="sidebar-brand">
+        <a class="js-scroll-trigger" href="#page-top">Almond & Valentina</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#page-top">Home</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#about">About</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#services">What Makes Us Special</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#portfolio">Puppy Photos</a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger" href="#contact">Contact</a>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- Header -->
+  <header class="masthead d-flex">
+    <div class="container text-center my-auto">
+      <h1 class="mb-1" style ="color:#ffffff;">Almond & Valentina</h1>
+      <h3 class="mb-5" style ="color:whitesmoke;">
+        <em>A Tale of Two Puppies Living in Oakland</em>
+      </h3>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Our Story</a>
+    </div>
+    <div class="overlay"></div>
+  </header>
+
+  <!-- About -->
+  <section class="content-section bg-light" id="about">
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-lg-10 mx-auto">
+          <h2>Finding Our Home</h2>
+          <p class="lead mb-5">At first we were alone, we were petrified, wondering how we'd ever live without daddies in our lives.
+            We spent so many nights thinking when we'll find our home. And then suddenly, we had a brand new home to roam!
+            And now we're here, in Oakland, CA. Being cute and cuddly on our walks every day.
+            See some more about us by reading about our lives, we can't wait for you to see our photos and cry!
+          </p>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What people say they love about us</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Services -->
+  <section class="content-section bg-primary text-white text-center" id="services">
+    <div class="container">
+      <div class="content-section-heading">
+        <h3 class="text-secondary mb-0">Our Perfect Traits</h3>
+        <h2 class="mb-5">What Makes Us So Cute</h2>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-pencil"></i>
+          </span>
+          <h4>
+            <strong>Intelligent</strong>
+          </h4>
+          <p class="text-faded mb-0">We're pretty smart cookies! Always looking to learn!</p>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-mustache"></i>
+          </span>
+          <h4>
+            <strong>Fluffy</strong>
+          </h4>
+          <p class="text-faded mb-0">Being poodle mixes, we have super fluffy, long, beautiful fur. Just ask our dads!</p>
+        </div>
+        <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-energy"></i>
+          </span>
+          <h4>
+            <strong>Playful</strong>
+          </h4>
+          <p class="text-faded mb-0">Wrestling, tug of war, tag. Playtime is all the time in our house.</p>
+        </div>
+        <div class="col-lg-3 col-md-6">
+          <span class="service-icon rounded-circle mx-auto mb-3">
+            <i class="icon-heart"></i>
+          </span>
+          <h4>
+            <strong>Loving</strong>
+          </h4>
+          <p class="text-faded mb-0">We love our dads so much. Any time that we can spend with them is the best time!</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+ <!-- Portfolio -->
+  <section class="content-section" id="portfolio">
+    <div class="container">
+      <div class="content-section-heading text-center">
+        <h3 class="text-secondary mb-0">Puppy Photos</h3>
+        <h2 class="mb-5">Cuties on a mission.</h2>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6">
+          <a class="portfolio-item">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Valentina</h2>
+                <p class="mb-0">I'm the oldest! I'm a yorkipoo with jet black fur who's just over a year old!</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/valentina-1.jpg" alt="Adorable Valentina">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Almond</h2>
+                <p class="mb-0">I'm the baby! Almost 6 months old, I'm a black and grey merle cockapoo!</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/almond-1.jpg" alt="Sweet Almond">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Snuggle Champions</h2>
+                <p class="mb-0">Name a better pair of snugglers, I doubt you'll find them cause we are pros.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/snuggle_time.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item">
+            <span class="caption">
+              <span class="caption-content">
+                <h2>Proud Walkers</h2>
+                <p class="mb-0">We love our walks! If you ever catch us on the street in Oakland we'll pose for you.</p>
+              </span>
+            </span>
+            <img class="img-fluid" src="img/proud_walkers.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  
+  <!-- Call to Action -->
+  <section class="content-section bg-primary text-white">
+    <div class="container text-center">
+      <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+      <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/oJ4RTWw5OlU' frameborder='0' allowfullscreen></iframe></div>
+      <br>
+      <a href="https://www.youtube.com/channel/UCjiBNNBZcCAVVLT4zZ1oz6g" class="btn btn-xl btn-light mr-4">See More!</a>
+    </div>
+  </section>
+
+  <!-- Map -->
+  <section id="contact"></section>
+
+  <!-- Footer -->
+  <footer class="footer text-center">
+    <div class="container">
+      <ul class="list-inline mb-5">
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/bradleydixon">
+            <i class="icon-social-linkedin"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/b_dix">
+            <i class="icon-social-twitter"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white" href="https://github.com/bradweee">
+            <i class="icon-social-github"></i>
+          </a>
+        </li>
+      </ul>
+      <p class="text-muted small mb-0">Copyright &copy; Brad's Mind & Existence</p>
+    </div>
+  </footer>
+
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/stylish-portfolio.min.js"></script>
+
+</body>
+
+</html>
