--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
       <h1 class="mb-1" style ="color:#ffffff;">Almond & Valentina</h1>
-      <h3 class="mb-5" style ="color:whitesmoke;">
+      <h3 class="mb-5" style ="color:#ffffff;">
         <em>A Tale of Two Puppies Living in Oakland</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Our Story</a>
@@ -189,7 +189,7 @@
   <!-- Call to Action -->
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
-      <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+      <h2 class="mb-4">And just for fun, a little playtime...</h2>
       <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/oJ4RTWw5OlU' frameborder='0' allowfullscreen></iframe></div>
       <br>
       <a href="https://www.youtube.com/channel/UCjiBNNBZcCAVVLT4zZ1oz6g" class="btn btn-xl btn-light mr-4">See More!</a>
